# gui-slint-template

./: .gitmodules  Cargo.toml  README.md  build.rs
cpp/: CMakeLists.txt  hello.cpp  hello.h
cpp/kokkos/: Kokkos_Core.hpp
cpp/taskflow/: README.md
cpp/taskflow/taskflow/: taskflow.hpp
src/: main.rs
ui/: app.slint
